# GeometricDistanceBasedFeatureSelection

./: Example1.ipynb  GDFS.txt  Gdfs_SFS.ipynb  README.md  Untitled.ipynb  geometricDistanceBasedFeatureSelection.py
.ipynb_checkpoints/: Example1-checkpoint.ipynb  Gdfs_SFS-checkpoint.ipynb
packaging_tutorial/: geometricDistanceBasedFeatureSelection.py
packaging_tutorial/example_pkg/: setup.cfg  setup.py
