# replace with your username:
name = example-pkg-SEOYOUNGKIM
version = 0.0.1
author = kimseoyoung
author_email = seoykim996@gmail.com
description = geometric distance based feature selection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:example_pkg
python_requires = >=3.6